--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "jest "
   },
   "author": "Rishik",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.9.3"
+  }
 }
